--- a/index.ipynb
+++ b/index.ipynb
@@ -86,41 +86,41 @@
     }
    ],
    "source": [
-    "# # check dataset name and shape, type\n",
-    "# # <HDF5 dataset \"default\": shape (1000,), type \"<f8\">\n",
-    "# train_filename = 'model.hdf5'\n",
-    "# with h5py.File(train_filename, \"r\") as f:\n",
-    "#     for file_key in f.keys():\n",
-    "#         group = f[file_key]\n",
-    "#         print(group)\n",
-    "#         try:\n",
-    "#             for group_key in group.keys():\n",
-    "#                 group2 = group[group_key]\n",
-    "#                 print(f\"---->{group2}\")\n",
-    "#                 for group_key2 in group2.keys():\n",
-    "#                         print(f\"--------->{group2[group_key2]}\")\n",
-    "#         except AttributeError:\n",
-    "#             pass\n",
+    "# check dataset name and shape, type\n",
+    "# <HDF5 dataset \"default\": shape (1000,), type \"<f8\">\n",
+    "train_filename = 'model.hdf5'\n",
+    "with h5py.File(train_filename, \"r\") as f:\n",
+    "    for file_key in f.keys():\n",
+    "        group = f[file_key]\n",
+    "        print(group)\n",
+    "        try:\n",
+    "            for group_key in group.keys():\n",
+    "                group2 = group[group_key]\n",
+    "                print(f\"---->{group2}\")\n",
+    "                for group_key2 in group2.keys():\n",
+    "                        print(f\"--------->{group2[group_key2]}\")\n",
+    "        except AttributeError:\n",
+    "            pass\n",
     "\n",
-    "# # train\n",
-    "# train_filename = '../input/g2net-detecting-continuous-gravitational-waves/train/004f23b2d.hdf5'\n",
-    "# datasets = []\n",
-    "# with h5py.File(train_filename, \"r\") as f:\n",
-    "#     for file_key in f.keys():\n",
-    "#         group = f[file_key]\n",
-    "#         if isinstance(group, h5py._hl.dataset.Dataset):\n",
-    "#             datasets.append(np.array(group))\n",
-    "#             continue\n",
-    "#         for group_key in group.keys():\n",
-    "#             group2 = group[group_key]\n",
-    "#             if isinstance(group2, h5py._hl.dataset.Dataset):\n",
-    "#                 datasets.append(np.array(group2))\n",
-    "#                 continue\n",
-    "#             for group_key2 in group2.keys():\n",
-    "#                 group3 = group2[group_key2]\n",
-    "#                 if isinstance(group3, h5py._hl.dataset.Dataset):\n",
-    "#                     datasets.append(np.array(group3))\n",
-    "#                     continue"
+    "# train\n",
+    "train_filename = 'model.hdf5'\n",
+    "datasets = []\n",
+    "with h5py.File(train_filename, \"r\") as f:\n",
+    "    for file_key in f.keys():\n",
+    "        group = f[file_key]\n",
+    "        if isinstance(group, h5py._hl.dataset.Dataset):\n",
+    "            datasets.append(np.array(group))\n",
+    "            continue\n",
+    "        for group_key in group.keys():\n",
+    "            group2 = group[group_key]\n",
+    "            if isinstance(group2, h5py._hl.dataset.Dataset):\n",
+    "                datasets.append(np.array(group2))\n",
+    "                continue\n",
+    "            for group_key2 in group2.keys():\n",
+    "                group3 = group2[group_key2]\n",
+    "                if isinstance(group3, h5py._hl.dataset.Dataset):\n",
+    "                    datasets.append(np.array(group3))\n",
+    "                    continue"
    ]
   }
  ],
