--- a/index.ipynb
+++ b/index.ipynb
@@ -122,6 +122,57 @@
     "                    datasets.append(np.array(group3))\n",
     "                    continue"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "success to load the model.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import h5py\n",
+    "\n",
+    "# # Open the HDF5 file\n",
+    "# with h5py.File('model.hdf5', 'r') as file:\n",
+    "#     # Get the keys of all datasets in the file\n",
+    "#     dataset_keys = list(file.keys())\n",
+    "\n",
+    "# # Print the dataset keys\n",
+    "# print(\"Available datasets:\")\n",
+    "# for key in dataset_keys:\n",
+    "#     print(key)\n",
+    "\n",
+    "# # Prompt the user to input the model dataset name\n",
+    "# model_name = input(\"Enter the name of the model dataset: \")\n",
+    "\n",
+    "# # Load the model using the specified dataset name\n",
+    "# with h5py.File('model.hdf5', 'r') as file:\n",
+    "#     model = file.get(model_name)\n",
+    "\n",
+    "# # Check if the model was loaded successfully\n",
+    "# if model is not None:\n",
+    "#     print(\"Model loaded successfully.\")\n",
+    "# else:\n",
+    "#     print(\"Failed to load the model.\")\n",
+    "\n",
+    "import h5py\n",
+    "\n",
+    "with h5py.File('model.hdf5', \"r\") as file:\n",
+    "    try:\n",
+    "        model = file.get(\"default\") \n",
+    "        \n",
+    "        print(\"success to load the model.\")\n",
+    "    except OSError:\n",
+    "        print(\"Failed to load the model.\")\n",
+    "# Open the HDF5 file in read mode\n"
+   ]
   }
  ],
  "metadata": {
