--- a/index.ipynb
+++ b/index.ipynb
@@ -117,112 +117,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available datasets:\n",
-      "model_weights\n",
-      "optimizer_weights\n",
-      "_MutableMapping__marker\n",
-      "__abstractmethods__\n",
-      "__bool__\n",
-      "__class__\n",
-      "__class_getitem__\n",
-      "__contains__\n",
-      "__delattr__\n",
-      "__delitem__\n",
-      "__dict__\n",
-      "__dir__\n",
-      "__doc__\n",
-      "__eq__\n",
-      "__format__\n",
-      "__ge__\n",
-      "__getattribute__\n",
-      "__getitem__\n",
-      "__getnewargs__\n",
-      "__getstate__\n",
-      "__gt__\n",
-      "__hash__\n",
-      "__init__\n",
-      "__init_subclass__\n",
-      "__iter__\n",
-      "__le__\n",
-      "__len__\n",
-      "__lt__\n",
-      "__module__\n",
-      "__ne__\n",
-      "__new__\n",
-      "__nonzero__\n",
-      "__reduce__\n",
-      "__reduce_ex__\n",
-      "__repr__\n",
-      "__reversed__\n",
-      "__setattr__\n",
-      "__setitem__\n",
-      "__sizeof__\n",
-      "__slots__\n",
-      "__str__\n",
-      "__subclasshook__\n",
-      "__weakref__\n",
-      "_abc_impl\n",
-      "_d\n",
-      "_e\n",
-      "_gcpl_crt_order\n",
-      "_id\n",
-      "_ipython_key_completions_\n",
-      "_lapl\n",
-      "_lcpl\n",
-      "attrs\n",
-      "build_virtual_dataset\n",
-      "clear\n",
-      "copy\n",
-      "create_dataset\n",
-      "create_dataset_like\n",
-      "create_group\n",
-      "create_virtual_dataset\n",
-      "file\n",
-      "get\n",
-      "id\n",
-      "items\n",
-      "keys\n",
-      "move\n",
-      "name\n",
-      "parent\n",
-      "pop\n",
-      "popitem\n",
-      "ref\n",
-      "regionref\n",
-      "require_dataset\n",
-      "require_group\n",
-      "setdefault\n",
-      "update\n",
-      "values\n",
-      "visit\n",
-      "visititems\n"
+      "Items in the root of the file: ['model_weights', 'optimizer_weights']\n",
+      "Groups in the root of the file: ['model_weights', 'optimizer_weights']\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "\"Unable to synchronously open object (object 'dataset_name' doesn't exist)\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[47], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m h5py\u001b[38;5;241m.\u001b[39mFile(file_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m     15\u001b[0m     group \u001b[38;5;241m=\u001b[39m file[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel_weights\u001b[39m\u001b[38;5;124m'\u001b[39m]  \u001b[38;5;66;03m# Replace 'group_name' with the actual group name\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m     dataset \u001b[38;5;241m=\u001b[39m \u001b[43mgroup\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdataset_name\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \n",
+      "File \u001b[1;32mh5py\\_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mh5py\\_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\h5py\\_hl\\group.py:357\u001b[0m, in \u001b[0;36mGroup.__getitem__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    355\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid HDF5 object reference\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    356\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(name, (\u001b[38;5;28mbytes\u001b[39m, \u001b[38;5;28mstr\u001b[39m)):\n\u001b[1;32m--> 357\u001b[0m     oid \u001b[38;5;241m=\u001b[39m \u001b[43mh5o\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_e\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlapl\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_lapl\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    358\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    359\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAccessing a group is done with bytes or str, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    360\u001b[0m                     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnot \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mtype\u001b[39m(name)))\n",
+      "File \u001b[1;32mh5py\\_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mh5py\\_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mh5py\\h5o.pyx:189\u001b[0m, in \u001b[0;36mh5py.h5o.open\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"Unable to synchronously open object (object 'dataset_name' doesn't exist)\""
      ]
     }
    ],
    "source": [
     "import h5py\n",
     "\n",
-    "# Open the HDF5 file\n",
-    "with h5py.File('model.hdf5', 'r') as file:\n",
-    "    dataset_keys = list(file.keys())\n",
+    "file_path = 'model.hdf5'  # Replace with the actual file path\n",
     "\n",
-    "# Print the dataset keys\n",
-    "print(\"Available datasets:\")\n",
-    "for key in dataset_keys:\n",
-    "    print(key)\n",
+    "with h5py.File(file_path, 'r') as file:\n",
+    "    # List all items (groups and datasets) in the root of the file\n",
+    "    items = list(file.keys())\n",
+    "    print(\"Items in the root of the file:\", items)\n",
     "\n",
-    "with h5py.File('model.hdf5', \"r\") as file:\n",
-    "    model = file.get(\"model_weights\") \n",
-    "\n",
-    "for method in dir(model):\n",
-    "    print(method)"
+    "    # Identify groups by checking their type\n",
+    "    groups = [item for item in items if isinstance(file[item], h5py.Group)]\n",
+    "    print(\"Groups in the root of the file:\", groups)\n"
    ]
   }
  ],
