--- a/index.ipynb
+++ b/index.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -126,23 +126,6 @@
      "text": [
       "Items in the root of the file: ['model_weights', 'optimizer_weights']\n",
       "Groups in the root of the file: ['model_weights', 'optimizer_weights']\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "\"Unable to synchronously open object (object 'dataset_name' doesn't exist)\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[47], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m h5py\u001b[38;5;241m.\u001b[39mFile(file_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m     15\u001b[0m     group \u001b[38;5;241m=\u001b[39m file[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel_weights\u001b[39m\u001b[38;5;124m'\u001b[39m]  \u001b[38;5;66;03m# Replace 'group_name' with the actual group name\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m     dataset \u001b[38;5;241m=\u001b[39m \u001b[43mgroup\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdataset_name\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \n",
-      "File \u001b[1;32mh5py\\_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mh5py\\_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\h5py\\_hl\\group.py:357\u001b[0m, in \u001b[0;36mGroup.__getitem__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    355\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid HDF5 object reference\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    356\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(name, (\u001b[38;5;28mbytes\u001b[39m, \u001b[38;5;28mstr\u001b[39m)):\n\u001b[1;32m--> 357\u001b[0m     oid \u001b[38;5;241m=\u001b[39m \u001b[43mh5o\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_e\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlapl\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_lapl\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    358\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    359\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAccessing a group is done with bytes or str, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    360\u001b[0m                     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnot \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mtype\u001b[39m(name)))\n",
-      "File \u001b[1;32mh5py\\_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mh5py\\_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mh5py\\h5o.pyx:189\u001b[0m, in \u001b[0;36mh5py.h5o.open\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: \"Unable to synchronously open object (object 'dataset_name' doesn't exist)\""
      ]
     }
    ],
@@ -158,7 +141,162 @@
     "\n",
     "    # Identify groups by checking their type\n",
     "    groups = [item for item in items if isinstance(file[item], h5py.Group)]\n",
-    "    print(\"Groups in the root of the file:\", groups)\n"
+    "    print(\"Groups in the root of the file:\", groups)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Items in the group 'model_weights': ['activation', 'activation_1', 'activation_2', 'activation_3', 'batch_normalization', 'batch_normalization_1', 'batch_normalization_2', 'batch_normalization_3', 'concatenate', 'concatenate_1', 'conv2d_10', 'conv2d_11', 'conv2d_12', 'conv2d_3', 'conv2d_4', 'conv2d_5', 'conv2d_6', 'conv2d_7', 'conv2d_8', 'conv2d_9', 'dense_3', 'dense_5', 'dropout', 'flatten_1', 'input_2', 'max_pooling2d_10', 'max_pooling2d_11', 'max_pooling2d_4', 'max_pooling2d_5', 'max_pooling2d_6', 'max_pooling2d_7', 'max_pooling2d_8', 'max_pooling2d_9', 'top_level_model_weights']\n",
+      "Subgroups in the group 'model_weights': ['activation', 'activation_1', 'activation_2', 'activation_3', 'batch_normalization', 'batch_normalization_1', 'batch_normalization_2', 'batch_normalization_3', 'concatenate', 'concatenate_1', 'conv2d_10', 'conv2d_11', 'conv2d_12', 'conv2d_3', 'conv2d_4', 'conv2d_5', 'conv2d_6', 'conv2d_7', 'conv2d_8', 'conv2d_9', 'dense_3', 'dense_5', 'dropout', 'flatten_1', 'input_2', 'max_pooling2d_10', 'max_pooling2d_11', 'max_pooling2d_4', 'max_pooling2d_5', 'max_pooling2d_6', 'max_pooling2d_7', 'max_pooling2d_8', 'max_pooling2d_9', 'top_level_model_weights']\n",
+      "Datasets in the group 'model_weights': []\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "with h5py.File(file_path, 'r') as file:\n",
+    "    group_name = 'model_weights'  # Replace with the actual group name\n",
+    "    group = file[group_name]\n",
+    "\n",
+    "    # List all items (groups and datasets) in the specified group\n",
+    "    group_items = list(group.keys())\n",
+    "    print(f\"Items in the group '{group_name}':\", group_items)\n",
+    "\n",
+    "    # Identify groups within the specified group\n",
+    "    subgroups = [item for item in group_items if isinstance(group[item], h5py.Group)]\n",
+    "    print(f\"Subgroups in the group '{group_name}':\", subgroups)\n",
+    "\n",
+    "    dataset_names = [name for name in group.keys() if isinstance(group[name], h5py.Dataset)]\n",
+    "    print(f\"Datasets in the group '{group_name}':\", dataset_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "with h5py.File(file_path, 'r') as file:\n",
+    "    group_name = 'optimizer_weights'  # Replace with the actual group name\n",
+    "    group = file[group_name]\n",
+    "\n",
+    "    # List all items (groups and datasets) in the specified group\n",
+    "    group_items = list(group.keys())\n",
+    "    print(f\"Items in the group '{group_name}':\", group_items)\n",
+    "\n",
+    "    # Identify groups within the specified group\n",
+    "    subgroups = [item for item in group_items if isinstance(group[item], h5py.Group)]\n",
+    "    print(f\"Subgroups in the group '{group_name}':\", subgroups)\n",
+    "\n",
+    "    dataset_names = [name for name in group.keys() if isinstance(group[name], h5py.Dataset)]\n",
+    "    print(f\"Datasets in the group '{group_name}':\", dataset_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset shape: ()\n",
+      "Dataset value: 8526\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5py.File(file_path, 'r') as file:\n",
+    "    dataset = file['optimizer_weights/iteration:0']\n",
+    "    data_value  = dataset[()]  # Specify the start and end indices\n",
+    "    print(\"Value of the scalar dataset:\", data_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.preprocessing import image\n",
+    "from tensorflow.keras.models import model_from_json\n",
+    "\n",
+    "model_path = 'model.hdf5'  \n",
+    "# Load the Keras model from the HDF5 file\n",
+    "def load_keras_model(file_path):\n",
+    "    try:\n",
+    "        with h5py.File(file_path, 'r') as file:\n",
+    "            model_json = file.attrs['model_config']\n",
+    "            model = model_from_json(model_json)\n",
+    "            model.load_weights(file_path)\n",
+    "        return model\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading the model: {str(e)}\")\n",
+    "        return None\n",
+    "    \n",
+    "loaded_model = load_keras_model(model_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_methods = [method for method in dir(loaded_model) if callable(getattr(loaded_model, method))]\n",
+    "\n",
+    "# Print the list of methods\n",
+    "print(\"List of methods:\")\n",
+    "for method in model_methods:\n",
+    "    print(method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loaded_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 44ms/step\n",
+      "Predictions: [[6.2741542e-06 9.7548115e-01 1.6102545e-08 1.3940635e-07 2.4446208e-02\n",
+      "  1.3538022e-06 5.2435149e-05 5.3463797e-08 1.1696996e-05 6.5759872e-07]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.preprocessing import image\n",
+    "\n",
+    "img_path = 'luanuoc1.jpg'\n",
+    "img = image.load_img(img_path, target_size=(256, 256))\n",
+    "img_array = image.img_to_array(img)\n",
+    "img_array = np.expand_dims(img_array, axis=0)\n",
+    "img_array /= 255.0  # Normalize the image\n",
+    "\n",
+    "# Make a prediction\n",
+    "predictions = loaded_model.predict(img_array)\n",
+    "print(\"Predictions:\", predictions)"
    ]
   }
  ],
